# mldevops_exercise

./: .gitignore  .pre-commit-config.yaml  AML_Lab1.ipynb  AML_Lab1.py  pyproject.toml
