[tool.poetry]
name = "mldevops"
version = "0.1.0"
description = "mldevops package"
authors = ["BTarcholik"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
torch = "^2.5.1"
torchvision = "^0.20.1"
torchaudio = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
